Attempt 1 at fixing countdown timer on iPhone 7 Plus

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -792,7 +792,11 @@ h3 {
         width: 90%;
     }
 
-    .track_select{
+    .track_select {
         width: 90%;
+    }
+
+    #DateCountdown {
+        padding-left: 1px;
     }
 }
